[package]
name = "qen"
version = "0.1.0"
description = "allocator/memory subsystem for simulation/ECS"
repository = "https://github.com/bin/qen"
readme = "README.md"
license = "NONE"
keywords = ["no"]
categories = ["no"]
edition = "2024"

[lib]
crate-type = ["rlib", "dylib", "staticlib"]

[dependencies]
fixedbitset = "0.5.7"
libc = "0.2.180"
portable-atomic = "1.13.1"

[lints.rust]
future_incompatible = "deny"
deprecated_safe = "deny"
let_underscore = "deny"
#unused = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(miri)'] }

unsafe_op_in_unsafe_fn = "deny"
unsafe_attr_outside_unsafe = "deny"
missing_unsafe_on_extern = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"
missing_safety_doc = "deny"

[target.'cfg(loom)'.dependencies]
# Patched w/128-bit atomic support
loom = { git = "https://github.com/bin/loom.git" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
